# koka

./: koka.cabal
src/: Main.hs
src/Backend/CSharp/: FromCore.hs
src/Backend/JavaScript/: FromCore.hs
src/Common/: Syntax.hs
src/Compiler/: Compile.hs  Module.hs  Options.hs
src/Core/: AnalysisMatch.hs  AnalysisResume.hs  Check.hs  Core.hs  CoreVar.hs  Cps.hs  Divergent.hs  GenDoc.hs  Monadic.hs  Parse.hs  Pretty.hs  Simplify.hs  UnReturn.hs
src/Interpreter/: Interpret.hs
src/Kind/: Assumption.hs  Constructors.hs  Infer.hs  InferMonad.hs  Newtypes.hs  Synonym.hs
src/Koka/Type/: Assumption.hs  InfGamma.hs  Infer.hs  InferMonad.hs  Interlang.hs  Kind.hs  Operations.hs  Pretty.hs  Type.hs  TypeVar.hs  Unify.hs
src/Lib/: PPrint.hs
src/Syntax/: Colorize.hs  RangeMap.hs  Syntax.hs
src/Type/: Interlang.hs
