name:                koka
version:             0.1.0.0
license-file:        LICENSE
author:              Daan Leijen
maintainer:          daan@microsoft.com
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  other-extensions:    CPP, OverloadedStrings
  build-depends:       base >=4.9 && <5
                       , bytestring >=0.10 && <1
                       , time >=1.6 && <2
                       , parsec >=3.1 && <4
                       , containers >=0.5 && <1
                       , text >=1.2 && <2
                       , array >=0.5 && <1
                       , process >=1.4 && <2
                       , directory >=1.3 && <2
  hs-source-dirs:      src, src/Platform/cpp
  c-sources:           src/Platform/cpp/Platform/cconsole.c
  include-dirs:        src/Platform/cpp/Platform
  build-tools:         alex
  default-language:    Haskell2010
  exposed-modules:
    Core.Pretty
    Type.Pretty
    Kind.Pretty
    Core.Core
    Common.ColorScheme
    Common.Failure
    Common.File
    Common.Id
    Common.IdMap
    Common.IdNice
    Common.Name
    Common.NameMap
    Common.NamePrim
    Common.NameSet
    Common.Range
    Common.Syntax
    Common.Unique
    Compiler.Compile
    Type.Kind
    Type.TypeVar  
    Type.Interlang
    Syntax.Parse
    Common.Error
    Common.IdSet
    Common.Message
    Common.QNameMap
    Common.ResumeKind    
    Syntax.Colorize
    Syntax.Highlight
    Syntax.Layout
    Syntax.Lexeme
    Syntax.Lexer
    Syntax.Promote
    Syntax.RangeMap
    Syntax.Syntax    
  other-modules:
    Type.Type
    Kind.ImportMap
    Kind.Kind
    Kind.Synonym
    Lib.PPrint
    Lib.Printer
    Lib.Trace
    Platform.Config
    Platform.Console
    Platform.Filetime
    Platform.Runtime
    Platform.Var
    Backend.CSharp.FromCore
    Backend.JavaScript.FromCore
    Compiler.Module
    Compiler.Options
    Compiler.Package
    Core.AnalysisMatch
    Core.AnalysisResume
    Core.BindingGroups
    Core.Check
    Core.CoreVar
    Core.Divergent
    Core.GenDoc
    Core.Monadic
    Core.Parse
    Core.Simplify
    Core.UnReturn
    Core.Uniquefy
    Kind.Assumption
    Kind.Constructors
    Kind.Infer
    Kind.InferKind
    Kind.InferMonad
    Kind.Newtypes
    Kind.Unify
    Lib.JSON
    Lib.Scc
    Platform.GetOptions
    Static.BindingGroups
    Static.FixityResolve
    Type.Assumption
    Type.InfGamma
    Type.Infer
    Type.InferMonad
    Type.Operations
    Type.Unify
